fixed double scroll-bar in some pages

--- a/article/static/article/css/main.css
+++ b/article/static/article/css/main.css
@@ -60,6 +60,7 @@ body {
   height: 100%; /* For at least Firefox */
   min-height: 100%;
   overflow-x: hidden;
+  overflow-y: hidden;
   /*-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
 }
